--- a/Lab1.html
+++ b/Lab1.html
@@ -159,12 +159,12 @@
   <input type="text" placeholder="Фамилия" required>
   <input type="text" placeholder="Имя" required>
   <input type="text" placeholder="Отчество" required>
-    <button>ОК</button>
+    <button type="submit">ОК</button>
 </form>
 <form>
  <p><input type="number" placeholder="Число" required></p>
  <p> <input type="checkbox" id="check"> <label for="check">Good </label>
-     <button>OK</button> </p>
+     <button type="submit">OK</button> </p>
 </form>
 
 <form>
@@ -197,7 +197,7 @@
   <p> Введите пароль: <input type="password" required> </p><p> Повторите пароль: <input type="password" required>
   </p>
     <p><input type="checkbox" id="uch"><label for="uch"> Учусь платно</label> </p>
-    <p><button>Зарегистрироваться</button></p>
+    <p><button type="submit">Зарегистрироваться</button></p>
 </form>
 <hr size = "3" color="black">
 
